# rpi-rgb-led-matrix

bindings/python/: pyproject.toml  setup.py
bindings/python/rgbmatrix/shims/: pillow.c
