[build-system]
requires = ["setuptools>=61", "wheel", "Cython>=0.29"]
build-backend = "setuptools.build_meta"

[project]
name = "rgbmatrix"
version = "0.0.1+20250323"
description = "Packaged version of Christoph Friedrich's rpi-rgb-led-matrix library."
authors = [{name="Christoph Friedrich", email="christoph.friedrich@vonaffenfels.de"}]
maintainers = [{name="Chris Gill", email="chris@chrisgill.net"}]
license = "GPL-2.0-or-later"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["Pillow"]

[project.urls]
Homepage = "https://github.com/hzeller/rpi-rgb-led-matrix"
Repository = "https://github.com/dmod/rpi-rgb-led-matrix"

[tool.setuptools]
packages = ["rgbmatrix"]

[tool.setuptools.package-data]
rgbmatrix = ["*.so", "*.pyx", "*.pxd"]
